# swarmroles-support

./: .bumpversion.cfg  .cspell.json  .quickdocs.yml  .template.yml  .travis.yml  Gruntfile.js  README.md  pyproject.toml  setup.cfg  tox.ini
docs/: conf.py  index.rst
docs/sphinx/: conf.py
